# DriveGuard-AI

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELIVERY_GUIDE.md  DESIGN.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TEST_REPORT.md  THIRD_PARTY_NOTICES.md  resources.qrc  run_driveguard.bat  verify_release.ps1
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: python-smoke.yml
assets/: README.md  authorship.json
docs/: DEFENSE_GUIDE.md  DEMO_CHECKLIST.md  KNOWN_LIMITATIONS.md  PRIVACY.md  PROTOCOL.md
resources/: app.rc.in
schemas/: detector-sample.schema.json
scripts/: build_windows.ps1  create_release_manifest.ps1  detector.py  generate_voice_alerts.ps1  lenovo_privacy_probe.ps1  package_windows.ps1  repo_check.py  requirements.txt  setup_windows.ps1  smoke_test.py
src/: MainWindow.cpp  MainWindow.h  main.cpp
tests/: test_detector_logic.py
